--- a/templates/AboutMe.twig
+++ b/templates/AboutMe.twig
@@ -8,8 +8,7 @@
 
 	/* Keyframes for the typing animation */
 	@keyframes 
-	
-	 {
+	{
 		from {
 			width: 0;
 		}
@@ -19,48 +18,51 @@
 	}
 </style>
 
-<section id="aboutme" class="container-fluid d-flex flex-column justify-content-center align-items-center" style="min-height: 93vh; width: 100%; overflow: hidden;">
+<section id="aboutme" class="container-fluid d-flex flex-column justify-content-center align-items-center p-0" style="min-height: 93vh; width: 100%; overflow: hidden;">
 	<img class="mx-auto position-fixed" style="z-index: -1000000; filter: blur(7px) brightness(70%); height: 103%; width: 101%;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
 	<img class="mx-auto position-fixed bg-dark" style="z-index: -100000; filter: blur(5px); height: 102vh; width: auto;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
 
 	<div class="rounded-circle bg-dark border border-light">
 		<img class="m-2" style="height: 15vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
 	</div>
-	<div class="container m-1 p-2 main-bg-dark-translucent rounded-5 border border-light d-flex flex-column align-items-center justify-content-around" style="min-height: 30%;">
+	<div class="container m-md-1 p-md-2 main-bg-dark-translucent rounded-5 border border-light d-flex flex-column align-items-center justify-content-around" style="min-height: 35vh;">
 		<div class="row mt-md-0 mt-md-3 m-1">
-			<h2 class="p-md-2 text-center accent-color">Web & Game Dev <i class="fa fa-gamepad" aria-hidden="true"></i> </h2>
+			<h2 class="p-md-2 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
 		</div>
 		<div class="row mx-md-5 ">
-			<p class="typing-effect white-text text-justify text-lg m-1" style="font-size: 14px;">
-				Greetings! Welcome to my corner of the web. I'm Rodolfo also known as FoundTexas. I'm a passionate computer scientist specialized in 3D Graphics, Web and Game Development as well as some Project Management. I thrive on collaboration and believe that diverse perspectives fuel innovation, leading to significant and innovative experiences for all users.
+			<p class="typing-effect white-text text-justify text-lg m-1 fs-6">
+				Greetings! Welcome to my corner of the web. I'm Rodolfo also known as FoundTexas. I'm a computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.
 			</p>
 		</div>
 		<div >
-			<button type="button" class="custom-btn rounded-2 p-1 m-2 accent-bg text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">&nbsp;&nbsp;CV&nbsp;&nbsp;</button>
+			<button type="button" class="custom-btn rounded-2 p-1 m-2 accent-bg text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">
+				<h5 class="p-0 m-0"> &nbsp;<i class="fa fa-file" aria-hidden="true"></i> CV&nbsp;</h5>
+			</button>
 		</div>
 	</div>
 </section>
 
 <script>
 	window.onload = function () {
-var elements = document.getElementsByClassName('typing-effect');
-for (var i = 0; i < elements.length; i++) {
-typeWriter(elements[i].textContent, elements[i]);
-}
-};
+		var elements = document.getElementsByClassName('typing-effect');
+		for (var i = 0; i < elements.length; i++) {
+		typeWriter(elements[i].textContent, elements[i]);
+		}
+	};
 
-// Function to create the typing effect
-function typeWriter(text, targetElement) {
-var speed = 15; // Adjust typing speed here (lower value for faster typing)
-var i = 0;
-targetElement.textContent = ""; // Clear existing text
-function type() {
-if (i < text.length) {
-targetElement.textContent += text.charAt(i);
-i++;
-setTimeout(type, speed * (text.charAt(i) == ' ' ? 5 : 1));
-}
-}
-type();
-}
+	// Function to create the typing effect
+	function typeWriter(text, targetElement) {
+		var speed = 15; // Adjust typing speed here (lower value for faster typing)
+		var i = 0;
+		targetElement.textContent = ""; // Clear existing text
+		function type() {
+			if (i < text.length) {
+				targetElement.textContent += text.charAt(i);
+				i++;
+				setTimeout(type, speed * (text.charAt(i) == ' ' ? 5 : 1));
+			}
+		}
+		type();
+	}
+
 </script>
