--- a/templates/GameHighlights.twig
+++ b/templates/GameHighlights.twig
@@ -8,12 +8,12 @@
 		<div class="container-xxl rounded-4 main-bg-gradient-circle m-3 my-4 p-0 shadow-custom">
 			<div class="px-md-3 px-1 pt-3">
 				<div id="carouselExampleIndicators" class="carousel slide ">
-					<div class="carousel-inner rounded-4 bg-dark px-5 mb-3 shadow-custom" style="height: 45vh; aspect-ratio:1.5;">
+					<div class="carousel-inner rounded-4 bg-dark px-0 mb-3 shadow-custom" style="height: 45vh; aspect-ratio:1.5;">
 
 						{% for project in projects %}
 						{% for i in 0..5 %}
-							<div class="carousel-item p-0{% if loop.index0 == 0 %}active{% endif %}">
-								<img src="{{ project.iconref }}" class="w-100 h-auto" alt="{{ loop.index }}">
+							<div class="carousel-item d-flex flex-column align-content-center justify-content-center p-0 w-100 h-100 {% if loop.index0 == 0 %}active{% endif %}">
+								<img src="{{ project.iconref }}" class=" h-100" style="width:100%;" alt="{{ loop.index }}">
 							</div>
 							{% endfor %}
 						{% endfor %}
@@ -31,12 +31,19 @@
 			<div class="px-md-5">
 				<div class="px-md-5">
 					<div class="px-md-5 mx-md-5">
-						<div class="d-flex justify-content-start px-0 m-0 rounded-4 bg-dark shadow" style="overflow-x: auto; overflow-y: hidden;">
+						<div class="d-flex justify-content-start px-0 py-1 m-0 rounded-4 bg-dark shadow" style="overflow-x: auto; overflow-y: hidden;">
 							{% for project in projects %}
 							{% for i in 0..5 %}
-								<div class="col-3 rounded-4" >
-									<button data-bs-target="#carouselExampleIndicators" data-bs-slide-to="{{ loop.index0 }}" class="carousel-indicator btn btn-outline-primary d-flex flex-column justify-content-center align-items-center rounded-4 w-100 p-3 {% if loop.index0 == 0 %}active{% endif %}" style="aspect-ratio:1; overflow: hidden;">
-										<img src="{{ project.iconref }}" class="w-100 h-auto" alt="{{ loop.index }}">
+								<div class="col-3 rounded-4 px-1" style="aspect-ratio:1;">
+									<button 
+										data-bs-target="#carouselExampleIndicators" 
+										data-bs-slide-to="{{ loop.index0 }}" 
+										class="carousel-indicator btn btn-outline-main rounded-4 w-100 {% if loop.index0 == 0 %}active{% endif %}" 
+										style="aspect-ratio:1; overflow: hidden;"
+									>
+									<div class="w-100 h-100 rounded-4 d-flex flex-column justify-content-center align-items-center" style="aspect-ratio:1; overflow: hidden;">
+										<img src="{{ project.iconref }}" class="w-auto h-100 rounded-4" alt="{{ loop.index }}">
+									</div>
 									</button>
 								</div>
 							{% endfor %}
