Portafolio Event Load

--- a/templates/EventLoading/index.html.twig
+++ b/templates/EventLoading/index.html.twig
@@ -19,6 +19,8 @@
 			</select>
 		</div>
 
+		<button class="btn btn-success my-4" onClick="newMilestone()">+</button>
+
 		<div id="MilestoneContainer"></div>
 	</div>
 
@@ -27,6 +29,20 @@
 
 	<script>
 
+    function newMilestone() {
+        var xhr = new XMLHttpRequest();
+		xhr.onreadystatechange = function () {
+		if (xhr.readyState === XMLHttpRequest.DONE) {
+		if (xhr.status === 200) {
+		document.getElementById('MilestoneContainer').innerHTML = xhr.responseText;
+		} else {
+		console.error('Failed to fetch milestone form:', xhr.status);
+		}
+		}
+		};
+		xhr.open('GET', '/new/milestone', true);
+		xhr.send();
+    }
 
 		document.addEventListener('DOMContentLoaded', function () { // Add event listener for dropdown change
 document.getElementById('milestoneDropdown').addEventListener('change', function () {
