--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -14,19 +14,20 @@
 		.timeline-container:before {
 			content: '';
 			position: absolute;
-			left: 49vw;
+			left: 48.5vw;
 			top: 0;
 			bottom: 0;
 			width: 1vw;
 			background: #ccc;
 			box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+			background: linear-gradient(0deg, #1a7c43 0%, #daa715 100%);
 		}
 	</style>
 
-	<div id="timeline" class="row m-0 p-0 accent-bg-dark" style="min-height: 50vh;">
+	<div id="timeline" class="row m-0 p-0 accent-bg-dark" style="min-height: 75vh;">
 		{% include 'index/IndexHeader.twig' with {'upRef': 'aboutme', 'textRef': 'timeline', 'headText': 'timeline', 'darkbg': true} %}
 
-		<div class="col-12 row fixed-top py-2 position-sticky main-bg-dark rounded-4">
+		<div class="col-12 row fixed-top py-2 position-sticky main-bg-dark rounded-4" style="z-index: 1042;">
 
 			<div class="col-md-8 m-0 p-0">
 				{% set all_tags = [] %}
@@ -101,8 +102,9 @@
 					class="timeline-container row justify-content-center p-0 m-0 ">
 					<!-- Ensure relative positioning for the container -->
 					{% for event in events_in_year %}
-						<div class="col-12 row justify-content-center text-white">
-							<div class="card rounded-4 m-5 shadow-custom timeline-event main-bg-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
+						<div class=" col-12 row justify-content-center text-white">
+
+							<div class="timeline-event card rounded-4 m-5 shadow-custom main-bg-gradient{% if loop.index  % 2 == 0 %}-alter{% endif %}" style="width: 36rem; max-width: 90vw;">
 
 								<div class="card-body row m-0 justify-content-center text-center">
 
@@ -111,63 +113,65 @@
 									</h5>
 									<h3 class="col-auto card-title">{{ event.main.name }}</h3>
 
-									<p>Brief Description:</p>
-									<p class="m-0">{{ event.main.description != '' ? event.main.description ?? 'not defined' : 'not defined'}}</p>
-								</p>
+									{% if event.main.description is defined %}
+										<div class="p-2 bg-dark rounded-3">
+											<p class="m-0">{{ event.main.description }}</p>
+										</div>
+									{% endif %}
 
-								{% if event.bullets is defined %}
 
-									<div class="col my-2">
-										<button class="custom-btn" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="true" aria-controls="collapseWidthExample">
-											More Info
-										</button>
-									</div>
-
-									<div class="col-12">
-										<div class="collapse" id="collapseWidthExample">
-											<div class="card card-body main-bg-dark">
+									{% if event.main.bullets is defined and event.main.bullets|length > 0 %}
+										<div class="row my-2">
+											<div class="col">
+												<button class="custom-btn rounded-2 p-1 m-2 accent-bg text-white" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEvent{{ event.main.id }}" aria-expanded="false" aria-controls="collapseEvent{{ event.main.id }}">
+													<i class="fa fa-info-circle" aria-hidden="true"></i>
+													More Info
+												</button>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col collapse" id="collapseEvent{{ event.main.id }}">
 												<ul class="list-group list-group-flush">
-													{% for point in event.bullets %}
-														<li class="list-group-item">{{ point.name }}</li>
+													{% for point in event.main.bullets %}
+														<li class="list-group-item p-0 m-0">{{ point }}</li>
 													{% endfor %}
 												</ul>
 											</div>
 										</div>
-									</div>
+									{% endif %}
 
-								{% endif %}
 
-								{% if event.projects is defined %}
-									<h5 class="card-title">Asociated projects:</h5>
-									{% for project in event.projects %}
-										<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;" onclick="window.location.href='{{ path('app_project_detail', {'id': project.id}) }}'">
-											<img src="{{ project.iconref }}" style="height: 100%; width: auto;" alt="{{ project.name }}">
-										</div>
-										<h6 class="card-title">{{project.name}}</h6>
-									{% endfor %}
-								{% endif %}
+									{% if event.projects is defined %}
+										<h5 class="card-title">Asociated projects:</h5>
+										{% for project in event.projects %}
+											<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;" onclick="window.location.href='{{ path('app_project_detail', {'id': project.id}) }}'">
+												<img src="{{ project.iconref }}" style="height: 100%; width: auto;" alt="{{ project.name }}">
+											</div>
+											<h6 class="card-title">{{project.name}}</h6>
+										{% endfor %}
+									{% endif %}
+								</div>
+
+								<div class="tags" style="display: none;">{{ event.main.tags|join(',') }}</div>
 							</div>
-
-							<div class="tags" style="display: none;">{{ event.main.tags|json_encode|raw }}</div>
-
 						</div>
+					{% endfor %}
+					<div class="col-12 d-flex row flex-column justify-content-center align-items-center ">
+						<h6 id="noTimelineEvents" class="col-6 py-5 my-5 accent-bg-dark text-center mx-auto text-secondary border border-secondary rounded-3" style="display: none; z-index: 100;">
+							No events available.
+						</h6>
 					</div>
-				{% endfor %}
-				<div class="col-12 d-flex row flex-column justify-content-center align-items-center ">
-					<h6 id="noTimelineEvents" class="col-6 py-5 accent-bg-dark text-center mx-auto text-secondary border border-secondary rounded-3" style="display: none; z-index: 100;">
-						No events available.
-					</h6>
 				</div>
+
 			</div>
 
+		{% endfor %}
+		<div class="row d-flex container-fluid flex-column justify-content-center align-items-center mb-5 p-0 m-0">
+			<button class="btn btn-outline-success bg-dark shadow-custom col-3 text-center m-0 py-3" onclick="window.location.href='/#contact'">
+				Let's build together!</button>
 		</div>
 
-	{% endfor %}
-	<div class="row d-flex container-fluid flex-column justify-content-center align-items-center mb-5 p-0 m-0">
-		<button class="btn btn-outline-success bg-dark shadow-custom col-3 text-center m-0 py-3" onclick="window.location.href='/#contact'">
-			Let's build together!</button>
 	</div>
 
-</div>
-
-<script src="{{ asset('js/timeLine.js') }}"></script>{% endblock %}
+	<script src="{{ asset('js/timeLine.js') }}"></script>
+{% endblock %}
