--- a/templates/EventLoading/create_Project.twig
+++ b/templates/EventLoading/create_Project.twig
@@ -1,40 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Add New Milestone
+{% block title %}Add New Project
 {% endblock %}
 
 {% block head %}{% endblock %}
 
 {% block body %}
-	<h1>Create Milestone</h1>
+	<h1>Create Project</h1>
 
-	{{ form_start(mileStoneForm) }}
+	{{ form_start(projectForm) }}
 
-	{{ form_row(mileStoneForm.name) }}
-	{{ form_row(mileStoneForm.description) }}
-	{{ form_row(mileStoneForm.startDate) }}
-	{{ form_row(mileStoneForm.endDate) }}
-	{{ form_row(mileStoneForm.tags) }}
-
-	<button type="submit">Create</button>
-
-	{{ form_end(mileStoneForm) }}
-
-	<h1>Create Bulletpoint for Milestone</h1>
-
-	{{ form_start(bulletPointsForm) }}
-
-	{{ form_row(bulletPointsForm.name) }}
-	{{ form_row(bulletPointsForm.info) }}
-	{{ form_row(bulletPointsForm.milestone) }}
-
-	<div>
-		<label for="tags">Tags:</label>
-		{% include 'json_input_component.twig' %}
-	</div>
+	{{ form_row(projectForm.name) }}
+	{{ form_row(projectForm.description) }}
+	{{ form_row(projectForm.fileref) }}
+	{{ form_row(projectForm.iconref) }}
+	{{ form_row(projectForm.mileStone) }}
 
 	<button type="submit">Create</button>
 
-	{{ form_end(bulletPointsForm) }}
+	{{ form_end(projectForm) }}
 
 {% endblock %}
