--- a/templates/timeline_cv/index.html.twig
+++ b/templates/timeline_cv/index.html.twig
@@ -143,12 +143,17 @@
 
 									{% if event.projects is defined %}
 										<h5 class="card-title">Asociated projects:</h5>
-										{% for project in event.projects %}
-											<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;" onclick="window.location.href='{{ path('app_project_detail', {'id': project.id}) }}'">
-												<img src="{{ project.iconref }}" style="height: 100%; width: auto;" alt="{{ project.name }}">
-											</div>
-											<h6 class="card-title">{{project.name}}</h6>
-										{% endfor %}
+										<div class="row">
+											{% for project in event.projects %}
+
+											<div class="col-auto">
+												<div class="rounded-4 d-flex justify-content-center bg-dark mx-auto shadow" style="overflow: hidden; aspect-ratio: 1; cursor: pointer; max-width: 7rem;" onclick="window.location.href='{{ path('app_project_detail', {'id': project.id}) }}'">
+													<img src="{{ project.iconref }}" style="height: 100%; width: auto;" alt="{{ project.name }}">
+												</div>
+												<h6 class="card-title">{{project.name}}</h6>
+												</div>
+											{% endfor %}
+										</div>
 									{% endif %}
 								</div>
 
